--- a/费用多次归集说明.md
+++ b/费用多次归集说明.md
@@ -40,27 +40,27 @@
 graph TB
     Start[9月份: 鲜道源运营花钱<br/>6个GL科目<br/>房租、工资、办公费等] -->|9月30日| BIP[BIP系统自动结转]
     
-    Manual[10月15日: 财务手工录入贴现费] -->|手工录入| IE[interface_expense<br/>费用明细表<br/>tb=0 待处理]
+    Manual[10月15日: 财务手工录入新批次费用] -->|手工录入| IE[interface_expense<br/>费用明细表<br/>tb=0 待处理]
     
     BIP -->|自动推送| IE
     
     IE -->|10月3日 03:00<br/>定时任务归集GL科目| Agg1[归集API]
-    IE -->|10月15日<br/>手工触发归集贴现费| Agg2[归集API]
+    IE -->|10月15日<br/>手工触发归集新批次费用| Agg2[归集API]
     
     Agg1 -->|查询tb=0记录<br/>汇总exp_amount| CalcGL[计算GL总账<br/>首次: GL=SUM金额, deduction=0<br/>重复: deduction=已占用金额]
     
-    Agg2 -->|查询tb=0记录| CalcTXF[计算贴现费总额]
+    Agg2 -->|查询tb=0记录| CalcTXF[计算新批次费用总额]
     
     CalcGL -->|创建/更新| FE1[fc_expense<br/>GL费用合计<br/>batch_no递增<br/>need_allocate=1]
     
-    CalcTXF -->|创建| FE2[fc_expense<br/>贴现费<br/>need_allocate=1]
+    CalcTXF -->|创建| FE2[fc_expense<br/>新批次费用<br/>need_allocate=1]
     
     CalcGL -.->|更新| UpdateTB1[interface_expense.tb=1]
     CalcTXF -.->|更新| UpdateTB2[interface_expense.tb=1]
     
     FE1 -->|10月3日 04:00<br/>拆分API<br/>拆分到10月1-31日| Split1[fc_expense_allocate<br/>GL每日分摊<br/>31条记录<br/>is_valid=1]
     
-    FE2 -->|10月15日<br/>拆分到10月15-31日| Split2[fc_expense_allocate<br/>贴现费每日分摊<br/>17条记录<br/>is_valid=1]
+    FE2 -->|10月15日<br/>拆分到10月15-31日| Split2[fc_expense_allocate<br/>新批次费用每日分摊<br/>17条记录<br/>is_valid=1]
     
     Split1 -->|订单占用| Occupy[fc_expense_usage<br/>占用记录<br/>status=1已占用]
     Split2 -->|订单占用| Occupy
