--- a/费用多次归集说明.md
+++ b/费用多次归集说明.md
@@ -40,7 +40,7 @@
 graph TB
     Start[9月份: 鲜道源运营花钱<br/>6个GL科目<br/>房租、工资、办公费等] -->|9月30日| BIP[BIP系统自动结转]
     
-    Manual[10月15日: 财务手工录入新批次费用] -->|手工录入| IE[interface_expense<br/>费用明细表<br/>tb=0 待处理]
+    Manual[10月15日: 财务手工录入新批次费用] -->|出发重复归集| IE[interface_expense<br/>费用明细表<br/>tb=0 待处理]
     
     BIP -->|自动推送| IE
     
